Added more content to torso_tables.html.

--- a/nioh2/tools/temper_tables/torso_tables.html
+++ b/nioh2/tools/temper_tables/torso_tables.html
@@ -252,7 +252,7 @@
 
 
     <!-- ========== ========== ========== ========== ==========
-    Jutsu Power Attribute Tables
+    Standard Gear Attribute Tables
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 lg:px-0 flex flex-col items-center">
         <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded
@@ -261,7 +261,7 @@
             <!-- ==========
             section header
             ========== -->
-            <h2 id="standard-gear" class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Jutsu Power Attribute Tables</h2>
+            <h2 id="standard-gear" class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Standard Gear Attribute Tables</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <p class="px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
@@ -270,9 +270,9 @@
             </p>
 
             <!-- ==========
-            Sensor Attributes
+            Jutsu Power Attributes
             ========== -->
-            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Sensor Attributes</h3>
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Jutsu Power Attributes</h3>
             <div class="overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
@@ -308,6 +308,301 @@
                         <td>13</td>
                         <td>No</td>
                     </tr>
+                </table>
+            </div>
+
+
+            <!-- ==========
+            Untouched Jutsu Attributes
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Untouched Jutsu Attributes</h3>
+            <div class="overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th rowspan="2">Attribute</th>
+                        <th colspan="2">Familiarity</th>
+                        <th rowspan="2">
+                            <div class="flex flex-col items-center gap-1">
+                                Inheritable ?
+                                <img src="./img/inherit_icon.png" alt="inherit icon">
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>0</th>
+                        <th>999</th>
+                    </tr>
+
+                    <!-- ==========
+                    Table Data
+                    ========== -->
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Untouched Ninjutsu</span></td>
+                        <td>4.9 %</td>
+                        <td>5.4 %</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Untouched Onmyo Magic</span></td>
+                        <td>4.9 %</td>
+                        <td>5.4 %</td>
+                        <td>Yes</td>
+                    </tr>
+                </table>
+            </div>
+
+
+            <!-- ==========
+            Resistance Attributes
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Resistance Attributes</h3>
+            <div class="overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th rowspan="2">Attribute</th>
+                        <th colspan="2">Familiarity</th>
+                        <th rowspan="2">
+                            <div class="flex flex-col items-center gap-1">
+                                Inheritable ?
+                                <img src="./img/inherit_icon.png" alt="inherit icon">
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>0</th>
+                        <th>999</th>
+                    </tr>
+
+                    <!-- ==========
+                    Table Data
+                    ========== -->
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Fire Resistance</td>
+                        <td>4.7</td>
+                        <td>5.1</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Water Resistance</td>
+                        <td>4.7</td>
+                        <td>5.1</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Lightning Resistance</td>
+                        <td>4.7</td>
+                        <td>5.1</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Poison Resistance</td>
+                        <td>4.7</td>
+                        <td>5.1</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Paralysis Resistance</td>
+                        <td>4.7</td>
+                        <td>5.1</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-exotic-text-color">Elemental Damage Taken</span></td>
+                        <td>-11.9 %</td>
+                        <td>-12.9 %</td>
+                        <td>No</td>
+                    </tr>
+                </table>
+            </div>
+
+
+            <!-- ==========
+            No Conflict
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">No Conflict</h3>
+            <div class="overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th rowspan="2">Attribute</th>
+                        <th colspan="2">Familiarity</th>
+                        <th rowspan="2">
+                            <div class="flex flex-col items-center gap-1">
+                                Inheritable ?
+                                <img src="./img/inherit_icon.png" alt="inherit icon">
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>0</th>
+                        <th>999</th>
+                    </tr>
+
+                    <!-- ==========
+                    Table Data
+                    ========== -->
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Amrita Earned</td>
+                        <td>1.5 %</td>
+                        <td>1.7 %</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Gold Earned</td>
+                        <td>3.1 %</td>
+                        <td>3.5 %</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Backstab Damage Taken</td>
+                        <td>-9.9 %</td>
+                        <td>-14.9 %</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Fall Damage Taken</td>
+                        <td>-9.9 %</td>
+                        <td>-14.9 %</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Projectile Damage Taken</td>
+                        <td>-3.9 %</td>
+                        <td>-4.3 %</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Defense</td>
+                        <td>12</td>
+                        <td>14</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Toughness</td>
+                        <td>2</td>
+                        <td>7</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Increase Attack & Defense [WEAPON]</td>
+                        <td>9</td>
+                        <td>11</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Life</span></td>
+                        <td>65</td>
+                        <td>69</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Damage Taken (Critical)</span></td>
+                        <td>-7.4 %</td>
+                        <td>-8.1 %</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Item Drop Rate</span></td>
+                        <td>4.9 %</td>
+                        <td>5.4 %</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Equipment Drop Rate</span></td>
+                        <td>4.9 %</td>
+                        <td>5.4 %</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-rare-text-color">Easy Target</span></td>
+                        <td>A-</td>
+                        <td>A+</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-rare-text-color">Defense Bonus (Amrita Gauge)</span></td>
+                        <td>B+</td>
+                        <td>A</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-rare-text-color">Life Recovery (Amrita Absorption)</span></td>
+                        <td>16</td>
+                        <td>36</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-exotic-text-color">Faster Winded Recovery</span></td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-exotic-text-color">Tenacity (Damage Over Time)</span></td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Yes</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
+    Ethereal Gear Only Attribute Tables
+    ========== ========== ========== ========== ========== -->
+    <section class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded
+            2xl:max-w-section-width lg:px-16">
+
+            <!-- ==========
+            section header
+            ========== -->
+            <h2 id="standard-gear" class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Ethereal Gear Only Attribute Tables</h2>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <p class="px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+                Attributes within a table conflict with other attributes in that same table. Attributes in the No Conflict Table 
+                do not conflict with each other. 
+            </p>
+
+            <!-- ==========
+            Damage Attributes
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Damage Attributes</h3>
+            <div class="overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th rowspan="2">Attribute</th>
+                        <th colspan="2">Familiarity</th>
+                        <th rowspan="2">
+                            <div class="flex flex-col items-center gap-1">
+                                Inheritable ?
+                                <img src="./img/inherit_icon.png" alt="inherit icon">
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>0</th>
+                        <th>999</th>
+                    </tr>
+
+                    <!-- ==========
+                    Table Data
+                    ========== -->
+
                 </table>
             </div>
         </div>
