Updated the id of the <h1> element to fix the table of contents function in torso_tables.html.

--- a/nioh2/tools/temper_tables/torso_tables.html
+++ b/nioh2/tools/temper_tables/torso_tables.html
@@ -567,7 +567,7 @@
             <!-- ==========
             section header
             ========== -->
-            <h2 id="standard-gear" class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Ethereal Gear Only Attribute Tables</h2>
+            <h2 id="ethereal-gear" class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Ethereal Gear Only Attribute Tables</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <p class="px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
