Fixed spelling mistakes in picture_scrolls.html.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -300,9 +300,9 @@
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 When a player obtains a Picture Scroll, the Scroll will always show 2 locked attributes
                 <img class="inline" src="./img/special_effect_icon.png" alt="special effect icon">, along with 2 hidden 
-                attribues. The player must complete the Scroll to unlock the attribues. The total number of attributes varies 
+                attributes. The player must complete the Scroll to unlock the attributes. The total number of attributes varies 
                 depending on the rarity of the Scroll. Generally higher tier Scrolls will have more attributes (up to 5). Only 
-                Scrolls of the Damned will have the maximum total of 6 attributes (2 locked attribues 
+                Scrolls of the Damned will have the maximum total of 6 attributes (2 locked attributes 
                 <img class="inline pl-1" src="./img/special_effect_icon.png" alt="special effect icon">, up to 3 additional random
                 attributes, and 1 Path Stat). Picture Scrolls can only be ran a limited number of times; it is displayed below 
                 the name of the Picture Scroll. Upon successfully completing the Picture Scroll, the number of Attempts Allowed 
@@ -336,9 +336,9 @@
                 attributes will be the same no matter how many people complete that exact same scroll. Furthermore, when an 
                 attribute is being replaced, the options the game gives you will be the same. Ex) A player finishes running a
                 Picture Scroll and wants to replace the attribute <span class="text-exotic-text-color">Extend Curse Nullification</span>.
-                For this specific scroll since the attribues are seeded it will be replaced with <span class="text-divine-text-color">Counter-Yokai Tactics</span>.
+                For this specific scroll since the attributes are seeded it will be replaced with <span class="text-divine-text-color">Counter-Yokai Tactics</span>.
                 When other players acquire this specific Scroll (either through Revenant farming or Co-op), when they attempt to change the
-                <span class="text-exotic-text-color">Extend Curse Nullification</span> attribue it will ALWAYS be replaced with 
+                <span class="text-exotic-text-color">Extend Curse Nullification</span> attribute it will ALWAYS be replaced with 
                 <span class="text-divine-text-color">Counter-Yokai Tactics</span>.
             </p>
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
