Updated the table spacing for better mobile responsiveness in weapon_tables.html.

--- a/nioh2/tools/temper_tables/weapon_tables.html
+++ b/nioh2/tools/temper_tables/weapon_tables.html
@@ -273,7 +273,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Amrita Attributes</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -322,7 +322,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Break Attributes</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -371,7 +371,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Imbue Element Attributes</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -432,7 +432,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Random Drop / Forge Only <span class="text-red-600">(Conflicts with other Imbue Stats)</span></h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header 
                     ========== -->
@@ -501,7 +501,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Life Drain Attributes</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header 
                     ========== -->
@@ -592,7 +592,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Attack Ki Consumption Attributes</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -653,7 +653,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Guard Ki Consumption Attributes</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -702,7 +702,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Damage Attributes</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -835,7 +835,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Ki Damage Attributes</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -890,7 +890,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Other Damage Attributes</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -933,7 +933,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Skill Name Attributes</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -988,7 +988,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Moonlit Snow Attributes (Odachi Only)</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -1069,7 +1069,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">No Conflict</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -1174,7 +1174,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Life Drain Attributes</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -1214,7 +1214,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Damage Attributes</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -1354,7 +1354,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Ki Damage Attributes</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -1403,7 +1403,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Other Damage Attributes</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -1452,7 +1452,7 @@
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">No Conflict</h3>
             <div class="overflow-hidden rounded-xl">
-                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
