Test - Updated the table spacing for mobile responsiveness in weapon_tables.html.

--- a/nioh2/tools/temper_tables/weapon_tables.html
+++ b/nioh2/tools/temper_tables/weapon_tables.html
@@ -272,8 +272,8 @@
             Amrita Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Amrita Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
